--- a/code/vite-project/index.html
+++ b/code/vite-project/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <title>Word Error Rate Calculator</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div id="root"></div>
+  </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
